[tool.poetry]
name = "torchtrain"
version = "0.1.0"
description = "This is a package to train DNN models with PyTorch."
authors = ["popura <popura.net@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
